# llm_eval_deep

./: README.md  deep_eval_wf.py  pyproject.toml
.github/workflows/: llm_evaluations.yml
llm_eval_deep/: test_deep_eval.py
