[tool.poetry]
name = "llm_eval_deep"
version = "0.1.0"
description = "A project for evaluating LLM deployments"
authors = ["Amaan amaan@codeverdict.ai", "Fahad fahadpatel1403@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
deepeval = "*"  

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
